--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!-- web dev basics  > Write you first lines of CSS! -->
+<!-- web dev basics  > Link to the CSS file -->
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <!-- 
+    Challenge: Link to the CSS file!
+    Hint: google it ;)
+    -->
   </head>
   <body>
-    Please accept our cookies!
+    <img src="google.png" />
+    <input type="text" />
   </body>
 </html>
