--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     Challenge: Link to the CSS file!
     Hint: google it ;)
     -->
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <img src="google.png" />
