--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-<!-- web dev basics  > Link to the CSS file -->
+<!-- web dev basics  > inline vs block elements -->
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- 
-    Challenge: Link to the CSS file!
-    Hint: google it ;)
-    -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
