--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!-- web dev basics  > Margin top -->
+<!-- web dev basics  > CSS classes -->
 <!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <img src="google.png" />
-    <input type="text" />
+    <div class="main">
+      <!-- Challenge - part 1
+       Add a class to each of these two elements -->
+      <img src="google.png" />
+      <input type="text" />
+    </div>
   </body>
 </html>
