--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
-<!-- web dev basics  > CSS classes -->
+<!-- web dev basics  > Learn margin via flags -->
 <!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="main">
-      <!-- Challenge - part 1
-       Add a class to each of these two elements -->
-      <img class="logo-img" src="google.png" />
-      <input class="search-input" type="text" />
-    </div>
+    <div class="red"></div>
+    <div class="blue"></div>
+    <div class="green"></div>
   </body>
 </html>
