add html and css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<!-- web dev basics  > Learn margin via flags -->
+<!-- web dev basics  > Add space between our elements -->
 <!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="red"></div>
-    <div class="blue"></div>
-    <div class="green"></div>
+    <div class="main">
+      <img class="logo-img" src="google.png" />
+      <img class="search-input" type="text" />
+    </div>
   </body>
 </html>
